--- a/themes/hugo/source/css/_partial/article.styl
+++ b/themes/hugo/source/css/_partial/article.styl
@@ -14,6 +14,11 @@ article
       color: $color-accent-3
       font-size: .85rem
 
+    .meta > *
+      margin-right: 7px
+      i.fa-tag
+        margin-left: 7px
+
     .author
       text-transform: uppercase
       letter-spacing: .01em
