--- a/themes/hugo/source/css/style.styl
+++ b/themes/hugo/source/css/style.styl
@@ -224,7 +224,6 @@ figure
   color: $color-background
   background-color: $color-text
 
-
 .hugo-h1
   font-size: 12em
   line-height: 1
@@ -264,14 +263,13 @@ figure
     font-size: 3em
     letter-spacing: -1px
 
-.hugo-reverted
+.hugo-inverta-selection
   color: $color-background
   display: inline
   position: relative
 
-.hugo-reverted-container
+.hugo-inverta-selection-container
   background-color: $color-text
-  position: relative
 
 .hugo-degrec
   background-color: $color-text
